--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -9,23 +9,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.12.1+cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "print(torch.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction to Tensors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## creating tensors\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://pytorch.org/docs/stable/tensors.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scalar\n",
+    "scalar = torch.tensor(7)\n",
+    "scalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#number of dimensions\n",
+    "#scalar has 0 dimensions - is a single number\n",
+    "scalar.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get tensor back as python int\n",
+    "scalar.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#vector\n",
+    "vector = torch.tensor([7,7])\n",
+    "vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#vector has 1 dimensions\n",
+    "vector.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MATRIX\n",
+    "\n",
+    "MATRIX = torch.tensor([[7, 8],\n",
+    "                       [9, 10]])\n",
+    "MATRIX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#matrix has 2 dimensions\n",
+    "MATRIX.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get matrix values\n",
+    "print(MATRIX[0])\n",
+    "print(MATRIX[1])\n",
+    "print(MATRIX[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get matrix shape\n",
+    "MATRIX.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TENSOR\n",
+    "TENSOR = torch.tensor([[[1, 2, 3],\n",
+    "                        [4, 5, 6],\n",
+    "                        [7, 8, 9]]])\n",
+    "TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensor has 3 dimensions\n",
+    "TENSOR.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get tensor shape\n",
+    "TENSOR.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensor indexing\n",
+    "print(TENSOR[0])\n",
+    "print(TENSOR[0][0])\n",
+    "print(TENSOR[0][0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convention is to use lowercase var names for scalar and vector\n",
+    "#uppercase for MATRIX and TENSOR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## random tensors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "random tensors are important as a neural network will begin with random data in their tensors, and then adjust those tensors to better represent the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a random tensor of size (1, 3, 4)\n",
+    "RAND_TENSOR = torch.rand(1, 3, 4)\n",
+    "RAND_TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RAND_TENSOR.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create random tensor with similar shape to an image tensor\n",
+    "RAND_IMG_TENSOR = torch.rand(224, 224, 3)\n",
+    "RAND_IMG_TENSOR.shape, RAND_IMG_TENSOR.ndim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zeros and ones tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensor of all zeros\n",
+    "ZERO_TENSOR = torch.zeros(3, 4)\n",
+    "ZERO_TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensor of all ones\n",
+    "ONES_TENSOR = torch.ones(3, 4)\n",
+    "ONES_TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check dtype of tensor\n",
+    "ONES_TENSOR.dtype, ZERO_TENSOR.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a range of tensors and tensors-like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using torch.arange\n",
+    "ONE_TO_TEN = torch.arange(1, 11)\n",
+    "ONE_TO_TEN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#works like built-in range\n",
+    "RANGE_TENSOR = torch.arange(34, 887, 16)\n",
+    "RANGE_TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create tensors-like\n",
+    "TEN_ZERO_TENSOR = torch.zeros_like(input=ONE_TO_TEN)\n",
+    "TEN_ZERO_TENSOR\n",
+    "#creates a tensor of the same shape as the input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tensor Datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#float32 tensor\n",
+    "FLOAT_32_TENSOR = torch.tensor([1, 2, 3], dtype=None)\n",
+    "FLOAT_32_TENSOR"
    ]
   }
  ],
