--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -327,15 +327,174 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**note**\n",
+    "Tensor datatypes are one of the 3 major errors when using pytorch and deep learning\n",
+    "\n",
+    "1. tensors are wrong datatype\n",
+    "2. tensors are wrong shape\n",
+    "3. tensors are on the wrong device"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#float32 tensor\n",
-    "FLOAT_32_TENSOR = torch.tensor([1, 2, 3], dtype=None)\n",
+    "\n",
+    "\n",
+    "FLOAT_32_TENSOR = torch.tensor([1.0, 2.0, 3.0], \n",
+    "                               dtype=None,     #what datatype, float16, float32\n",
+    "                               device=None,             #GPU, CPU OR TPU\n",
+    "                               requires_grad=False)     #does pytorch track gradients\n",
     "FLOAT_32_TENSOR"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FLOAT_32_TENSOR.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FLOAT_16_TENSOR = FLOAT_32_TENSOR.type(torch.float16)\n",
+    "FLOAT_16_TENSOR.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEW_TENSOR = FLOAT_32_TENSOR * FLOAT_16_TENSOR\n",
+    "NEW_TENSOR.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INT_32_TENSOR = torch.tensor([1, 2, 3], \n",
+    "                               dtype=torch.int32,    \n",
+    "                               device=None,          \n",
+    "                               requires_grad=False)  \n",
+    "INT_32_TENSOR.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEW_TENSOR = INT_32_TENSOR * FLOAT_16_TENSOR\n",
+    "NEW_TENSOR.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get info from tensors - tensor attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1777, 0.6479, 0.2933, 0.2952],\n",
+       "        [0.4351, 0.3054, 0.1404, 0.9363],\n",
+       "        [0.2753, 0.2096, 0.5243, 0.4920]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create tensor\n",
+    "SOME_TENSOR = torch.rand(3, 4)\n",
+    "SOME_TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1777, 0.6479, 0.2933, 0.2952],\n",
+      "        [0.4351, 0.3054, 0.1404, 0.9363],\n",
+      "        [0.2753, 0.2096, 0.5243, 0.4920]])\n",
+      "torch.float32\n",
+      "torch.Size([3, 4])\n",
+      "torch.Size([3, 4])\n",
+      "cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "#find info of tensors\n",
+    "print(SOME_TENSOR)\n",
+    "print(SOME_TENSOR.dtype)\n",
+    "print(SOME_TENSOR.shape)\n",
+    "print(SOME_TENSOR.size())\n",
+    "print(SOME_TENSOR.device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## manipulating tensors - tensor operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tensor operations include\n",
+    "- addition\n",
+    "- subtraction\n",
+    "- multiplication (element-wise)\n",
+    "- division\n",
+    "- matrix-multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
