--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -491,11 +491,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3])\n",
+      "tensor([11, 12, 13])\n"
+     ]
+    }
+   ],
    "source": [
-    "#"
+    "#create a tensor and add 10\n",
+    "TENSOR = torch.tensor([1, 2, 3])\n",
+    "print(TENSOR)\n",
+    "TENSOR = TENSOR + 10\n",
+    "TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([110, 120, 130])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#multiply by 10\n",
+    "TENSOR = TENSOR * 10\n",
+    "TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([100, 110, 120])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#subtract 10\n",
+    "TENSOR = TENSOR - 10\n",
+    "TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1000, 1100, 1200])\n",
+      "tensor([110, 120, 130])\n",
+      "tensor([ 90, 100, 110])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pytorch inbuilt functions\n",
+    "print(torch.mul(TENSOR, 10))\n",
+    "print(torch.add(TENSOR, 10))\n",
+    "print(torch.sub(TENSOR, 10))"
    ]
   }
  ],
