--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -420,22 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.1777, 0.6479, 0.2933, 0.2952],\n",
-       "        [0.4351, 0.3054, 0.1404, 0.9363],\n",
-       "        [0.2753, 0.2096, 0.5243, 0.4920]])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create tensor\n",
     "SOME_TENSOR = torch.rand(3, 4)\n",
@@ -444,23 +431,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.1777, 0.6479, 0.2933, 0.2952],\n",
-      "        [0.4351, 0.3054, 0.1404, 0.9363],\n",
-      "        [0.2753, 0.2096, 0.5243, 0.4920]])\n",
-      "torch.float32\n",
-      "torch.Size([3, 4])\n",
-      "torch.Size([3, 4])\n",
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#find info of tensors\n",
     "print(SOME_TENSOR)\n",
@@ -491,18 +464,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1, 2, 3])\n",
-      "tensor([11, 12, 13])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create a tensor and add 10\n",
     "TENSOR = torch.tensor([1, 2, 3])\n",
@@ -513,20 +477,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([110, 120, 130])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#multiply by 10\n",
     "TENSOR = TENSOR * 10\n",
@@ -535,20 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([100, 110, 120])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#subtract 10\n",
     "TENSOR = TENSOR - 10\n",
@@ -557,24 +499,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#divide by 10\n",
+    "TENSOR = TENSOR / 10\n",
+    "TENSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pytorch inbuilt functions\n",
+    "from torch import tensor\n",
+    "\n",
+    "\n",
+    "print(torch.mul(TENSOR, 10))\n",
+    "print(torch.add(TENSOR, 10))\n",
+    "print(torch.sub(TENSOR, 10))\n",
+    "print(torch.div(TENSOR, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix multiplication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 main ways to preform multiplication on tensors\n",
+    "\n",
+    "1. element-wise\n",
+    "2. matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1000, 1100, 1200])\n",
-      "tensor([110, 120, 130])\n",
-      "tensor([ 90, 100, 110])\n"
+      "tensor([[1, 2, 3],\n",
+      "        [7, 8, 9]])\n",
+      "tensor([[ 4,  5,  6],\n",
+      "        [10, 11, 12]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  4,  10,  18],\n",
+       "        [ 70,  88, 108]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#element-wise\n",
+    "TENSOR = torch.tensor([[1, 2, 3], [7, 8, 9]])\n",
+    "TENSOR2 = torch.tensor([[4, 5, 6], [10, 11, 12]])\n",
+    "TENSOR3 = TENSOR * TENSOR2\n",
+    "print(TENSOR)\n",
+    "print(TENSOR2)\n",
+    "TENSOR3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 49,  61],\n",
+       "        [175, 223]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#matrix multiplication\n",
+    "TENSOR = torch.tensor([[1, 2, 3], [7, 8, 9]])\n",
+    "TENSOR2 = torch.tensor([[4, 5], [6, 10], [11, 12]])\n",
+    "TENSOR4 = torch.matmul(TENSOR, TENSOR2)\n",
+    "TENSOR5 = torch.zeros(len(TENSOR), len(TENSOR2[0]))\n",
+    "TENSOR4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%%timeit` not found.\n"
      ]
     }
    ],
    "source": [
-    "#pytorch inbuilt functions\n",
-    "print(torch.mul(TENSOR, 10))\n",
-    "print(torch.add(TENSOR, 10))\n",
-    "print(torch.sub(TENSOR, 10))"
+    "#matrix multiplication by hand\n",
+    "#compare time to using torch.matmul"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.41 ms, sys: 143 µs, total: 1.56 ms\n",
+      "Wall time: 1.07 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 49.,  61.],\n",
+       "        [175., 223.]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# iterate through rows of X\n",
+    "for i in range(len(TENSOR)):\n",
+    "   # iterate through columns of Y\n",
+    "   for j in range(len(TENSOR2[0])):\n",
+    "       # iterate through rows of Y\n",
+    "       for k in range(len(TENSOR2)):\n",
+    "           TENSOR5[i][j] += TENSOR[i][k] * TENSOR2[k][j]\n",
+    "\n",
+    "TENSOR5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.81 ms, sys: 185 µs, total: 2 ms\n",
+      "Wall time: 1.39 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 49,  61],\n",
+       "        [175, 223]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "TENSOR4 = torch.matmul(TENSOR, TENSOR2)\n",
+    "TENSOR4"
    ]
   }
  ],
