--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -538,36 +538,20 @@
     "2 main ways to preform multiplication on tensors\n",
     "\n",
     "1. element-wise\n",
-    "2. matrix"
+    "2. matrix\n",
+    "\n",
+    "there are 2 main rules matmul must satisfy\n",
+    "\n",
+    "1. the inner dimensions must match\n",
+    "\n",
+    "2. the resulting matrix has the shape of the outer dimensions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1, 2, 3],\n",
-      "        [7, 8, 9]])\n",
-      "tensor([[ 4,  5,  6],\n",
-      "        [10, 11, 12]])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[  4,  10,  18],\n",
-       "        [ 70,  88, 108]])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#element-wise\n",
     "TENSOR = torch.tensor([[1, 2, 3], [7, 8, 9]])\n",
@@ -580,21 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 49,  61],\n",
-       "        [175, 223]])"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#matrix multiplication\n",
     "TENSOR = torch.tensor([[1, 2, 3], [7, 8, 9]])\n",
@@ -606,17 +578,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%%timeit` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#matrix multiplication by hand\n",
     "#compare time to using torch.matmul"
@@ -624,29 +588,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.41 ms, sys: 143 µs, total: 1.56 ms\n",
-      "Wall time: 1.07 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 49.,  61.],\n",
-       "        [175., 223.]])"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# iterate through rows of X\n",
@@ -662,33 +606,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "TENSOR4 = torch.matmul(TENSOR, TENSOR2)\n",
+    "TENSOR4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## shape errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#shapes for matmul\n",
+    "\n",
+    "TENSOR_a = torch.rand(2, 3)\n",
+    "TENSOR_b = torch.rand(2, 3)\n",
+    "#torch.mm(TENSOR_a, TENSOR_b)    #mm is equivalent to matmul"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to fix the shape issue above, the shape can be manipulated with transpose (torch.T)\n",
+    "\n",
+    "switches the axis or dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.81 ms, sys: 185 µs, total: 2 ms\n",
-      "Wall time: 1.39 ms\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor([[ 49,  61],\n",
-       "        [175, 223]])"
+       "torch.Size([2, 3])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "TENSOR4 = torch.matmul(TENSOR, TENSOR2)\n",
-    "TENSOR4"
+    "TENSOR_b.T\n",
+    "TENSOR_b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0577, 0.4792],\n",
+       "        [0.3039, 0.5996]])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.mm(TENSOR_a, TENSOR_b.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0372, 0.1069, 0.1068],\n",
+       "        [0.0753, 0.0724, 0.2255],\n",
+       "        [0.1930, 0.6434, 0.5477]])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.mm(TENSOR_a.T, TENSOR_b)"
    ]
   }
  ],
