--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -738,6 +738,143 @@
     "#sum\n",
     "torch.sum(TENSOR), TENSOR.sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find indexes\n",
+    "torch.argmin(TENSOR), torch.argmax(TENSOR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## reshaping, stacking, squeezing and unsqueezing tensors\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "reshape =  reshapes a tensor to a defines shape\n",
+    "\n",
+    "view = see a tensor in a certain shape, but dont edit the underlying tensor\n",
+    "\n",
+    "stacking = combine multiple tensors vertically (vstack) or horizontially (hstack)\n",
+    "\n",
+    "squeeze = removes all 1 dimensions from a tensor\n",
+    "\n",
+    "unsqueeze = adds a 1 dimension to a tensor\n",
+    "\n",
+    "permute = returns a view of a tensor with dimensions permuted "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TENSOR = torch.arange(1., 10.)\n",
+    "TENSOR, TENSOR.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add a dimension\n",
+    "TENSOR.reshape(3, 3), TENSOR.reshape(9, 1), TENSOR.reshape(1, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change the view\n",
+    "TENSOR_view = TENSOR.reshape(3, 3)\n",
+    "TENSOR_view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#changing the view tensor will also change the original, only the output view is different\n",
+    "print(TENSOR, TENSOR_view)\n",
+    "TENSOR_view[0][0] = 100\n",
+    "print(TENSOR, TENSOR_view)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#stack tensors\n",
+    "TENSOR_stacked1 = torch.stack([TENSOR, TENSOR, TENSOR], dim=0)\n",
+    "print(TENSOR_stacked1)\n",
+    "TENSOR_stacked2 = torch.stack([TENSOR, TENSOR, TENSOR], dim=1)\n",
+    "print(TENSOR_stacked2)\n",
+    "TENSOR_stacked3 = torch.vstack([TENSOR, TENSOR, TENSOR])\n",
+    "print(TENSOR_stacked3)\n",
+    "TENSOR_stacked4 = torch.hstack([TENSOR, TENSOR, TENSOR])\n",
+    "print(TENSOR_stacked4)\n",
+    "print(TENSOR_stacked4.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#squeeze\n",
+    "TENSOR = torch.tensor([[1, 2, 3]])\n",
+    "print(TENSOR, TENSOR.shape)\n",
+    "TENSOR = TENSOR.squeeze()\n",
+    "print(TENSOR, TENSOR.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unsqueeze\n",
+    "TENSOR = torch.tensor([1, 2, 3])\n",
+    "print(TENSOR, TENSOR.shape)\n",
+    "TENSOR = TENSOR.unsqueeze(0)\n",
+    "print(TENSOR, TENSOR.shape)\n",
+    "TENSOR = torch.tensor([1, 2, 3])\n",
+    "TENSOR = TENSOR.unsqueeze(1)\n",
+    "print(TENSOR, TENSOR.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#permute\n",
+    "TENSOR = torch.rand(size=(224, 224, 3))\n",
+    "print(TENSOR.shape)\n",
+    "TENSOR_permuted = TENSOR.permute(2, 0, 1)\n",
+    "print(TENSOR_permuted.shape)"
+   ]
   }
  ],
  "metadata": {
