--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -875,6 +875,58 @@
     "TENSOR_permuted = TENSOR.permute(2, 0, 1)\n",
     "print(TENSOR_permuted.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## indexing data from tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a tensor\n",
+    "TENSOR = torch.arange(1, 10).reshape(1, 3, 3)\n",
+    "print(TENSOR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(TENSOR[0])\n",
+    "print(TENSOR[0][0])\n",
+    "print(TENSOR[0][0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ':' will select all of a target dimension\n",
+    "print(TENSOR[:, 0])\n",
+    "\n",
+    "#get all values of 0 and 1st dim, but 1st index of 2nd\n",
+    "print(TENSOR[:, :, 1])\n",
+    "\n",
+    "#get all values of 0 dim, but 1 index of 1st and 3rd\n",
+    "print(TENSOR[:, 1, 1])\n",
+    "\n",
+    "#get index 0 of 0 and 1 dim, and all values of 2nd\n",
+    "print(TENSOR[0, 0, :])\n",
+    "\n",
+    "#return 9 and 3, 6, 9\n",
+    "print(TENSOR[0, 2, 2])\n",
+    "print(TENSOR[:, :, 2])"
+   ]
   }
  ],
  "metadata": {
