--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -927,6 +927,44 @@
     "print(TENSOR[0, 2, 2])\n",
     "print(TENSOR[:, :, 2])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pytorch tensors and NumPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pytorch can interact with numpy\n",
+    "\n",
+    "* data in numpy can convert to tensor -> torch.from_numpy(ndarray)\n",
+    "* pytorch to numpy -> torch.tensor.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3. 4. 5. 6. 7.] \n",
+      " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#numpy is float64 by default\n",
+    "array = np.arange(1., 8.)\n",
+    "TENSOR = torch.from_numpy(array)\n",
+    "print(array, \"\\n\", TENSOR)"
+   ]
   }
  ],
  "metadata": {
