--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -947,23 +947,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 2. 3. 4. 5. 6. 7.] \n",
-      " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#numpy is float64 by default\n",
     "array = np.arange(1., 8.)\n",
     "TENSOR = torch.from_numpy(array)\n",
     "print(array, \"\\n\", TENSOR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensor to numpy\n",
+    "TENSOR = torch.ones(7)\n",
+    "np_array = TENSOR.numpy()\n",
+    "print(TENSOR, \"\\n\", np_array, \"\\n\", np_array.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reproducibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create 2 random tensors\n",
+    "a = torch.rand(3, 4)\n",
+    "b = torch.rand(3, 4)\n",
+    "\n",
+    "print(a, \"\\n\", b, \"\\n\", a == b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reproduciblily random tensors\n",
+    "\n",
+    "#set random seed\n",
+    "RANDOM_SEED = 1\n",
+    "\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "c = torch.rand(3, 4)\n",
+    "\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "d = torch.rand(3, 4)\n",
+    "\n",
+    "print(c, \"\\n\", d, \"\\n\", c == d)"
    ]
   }
  ],
