--- a/pytorch_fundamentals.ipynb
+++ b/pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PyTorch Fundamentals"
+    "# PyTorch Fundamentals"
    ]
   },
   {
@@ -18,13 +18,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "print(torch.__version__)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Introduction to Tensors"
    ]
   },
   {
