--- a/pytorch_workflow.ipynb
+++ b/pytorch_workflow.ipynb
@@ -14,14 +14,108 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn\n"
+    "from torch import nn\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## "
+    "## Preparing and loading data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "machine learning involves:\n",
+    "\n",
+    "1. get data into a numerical representation\n",
+    "2. build a model to learn patterns in that numerical representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create *known* parameters\n",
+    "\n",
+    "weight = 0.7\n",
+    "bias = 0.3\n",
+    "\n",
+    "start = 0\n",
+    "end = 1\n",
+    "step = 0.02\n",
+    "X = torch.arange(start, end, step).unsqueeze(dim=1)\n",
+    "\n",
+    "Y = weight * X + bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## splitting data into training and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create train/test split\n",
+    "\n",
+    "\n",
+    "train_split = int(0.8 * len(X))\n",
+    "\n",
+    "X_train, Y_train = X[:train_split], Y[:train_split]\n",
+    "X_test, Y_test = X[train_split:], Y[train_split:]\n",
+    "\n",
+    "len(X_train), len(Y_train), len(X_test), len(Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#visualise\n",
+    "\n",
+    "def plot_predictions(train_data=X_train,\n",
+    "                     train_labels=Y_train,\n",
+    "                     test_data=X_test,\n",
+    "                     test_labels=Y_test,\n",
+    "                     predictions=None):\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 7))\n",
+    "\n",
+    "    #plot training data in blue\n",
+    "    plt.scatter(train_data, train_labels, c=\"b\", s=4, label=\"training data\")\n",
+    "\n",
+    "    #plot test data in green\n",
+    "    plt.scatter(test_data, test_labels, c=\"g\", s=4, label=\"test data\")\n",
+    "\n",
+    "    if predictions is not None:\n",
+    "\n",
+    "        #plot predictions in red if they exist\n",
+    "        plt.scatter(test_data, predictions, c=\"r\", s=4, label=\"predictions\")\n",
+    "\n",
+    "    #show the legend\n",
+    "    plt.legend(prop={\"size\": 14})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_predictions()"
    ]
   }
  ],
@@ -32,7 +126,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.14"
   },
   "orig_nbformat": 4,
