--- a/pytorch_workflow.ipynb
+++ b/pytorch_workflow.ipynb
@@ -117,6 +117,47 @@
    "source": [
     "plot_predictions()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create linear regression model class\n",
+    "\n",
+    "class LinearRegressionModel(nn.Module):     # almost all pytorch classes inherit from nn.module\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.weights = nn.Parameter(torch.randn(1, \n",
+    "                                                requires_grad=True,\n",
+    "                                                dtype=torch.float32))\n",
+    "                                                \n",
+    "        self.bias = nn.Parameter(torch.randn(1,\n",
+    "                                             requires_grad=True,\n",
+    "                                             dtype=torch.float32))\n",
+    "\n",
+    "    #forward method to define the computation in the model\n",
+    "    def forward(self, X: torch.Tensor) -> torch.Tensor:\n",
+    "        return self.weights * X + self.bias\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
