--- a/pytorch_workflow.ipynb
+++ b/pytorch_workflow.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from torch import nn\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n"
    ]
   },
   {
@@ -267,6 +268,24 @@
    "outputs": [],
    "source": [
     "model_0.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save model\n",
+    "\n",
+    "\n",
+    "model_path = Path(\"models\")\n",
+    "model_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "model_name = \"model_0.pth\"\n",
+    "save_path = model_path / model_name\n",
+    "\n",
+    "torch.save(obj=model_0.state_dict(), f=save_path)\n"
    ]
   }
  ],
